--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,12 @@ jobs:
           name: Build Image
           command: |
             echo $CIRCLE_PROJECT_REPONAME
-            docker build -t "docker-local."$jfqdn"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_BUILD_NUM .
+            docker build -t $repo"."$jfqdn2"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_BUILD_NUM .
 
       - run:
           name: Configure JFrog CLI 
           command: |
-            /jfrog rt config --user=$user --password=$password --url="http://"$jfqdn"/artifactory" $jid
+            /jfrog rt config --user=$user --password=$password --url="http://"$jfqdn2"/artifactory" $jid
       - run:
           name: JFrogCLI Artifact publish, scan and promote
           command: |
