--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,19 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-
+      
+    - run:
+          name: "Configuring docker daemon to use insecure registries"
+          command: |
+            json=`mktemp`
+            echo '{ "insecure-registries": [ "35.192.149.57:80" ] }' > ${json}
+            sudo mv ${json} /etc/docker/daemon.json
+            sudo service docker restart
+            echo "Configured Docker daemon with insecure-registry"
+            
       - run:
           name: Build Image
           command: |
-            sudo echo '{"insecure-registries" : ["35.192.149.57"]}' > /etc/docker/daemon.json
             docker build -t $repo"."$jfqdn2"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_BUILD_NUM .
 
       - run:
