--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           command: |
             json=`mktemp`
             echo '{ "insecure-registries": [ "35.192.149.57:80" ] }' > ${json}
-            sudo mv ${json} /etc/docker/daemon.json
-            sudo service docker restart
+            mv ${json} /etc/docker/daemon.json
+            service docker restart
             echo "Configured Docker daemon with insecure-registry"
             
       - run:
