--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,8 @@ jobs:
       - run:
           name: "Configuring docker daemon to use insecure registries"
           command: |
-            json=`mktemp`
-            echo '{ "insecure-registries": [ "35.192.149.57:80" ] }' > ${json}
-            mv ${json} /etc/docker/daemon.json
+            mkdir /etc/docker
+            echo '{ "insecure-registries": [ "35.192.149.57:80" ] }' > /etc/docker/daemon.json
             service docker restart
             echo "Configured Docker daemon with insecure-registry"
             
